[project]
name = "hx-complete-generator"
version = "2026.1.19"
description = "Data generator for the hx-complete extension"
license = "LICENSE.md"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests>=2.32"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.0",
    "types-requests>=2.32.4.20250913",
]
